[gd_scene load_steps=5 format=3 uid="uid://6b2hdefjcvdy"]

[ext_resource type="Script" path="res://skill_list.gd" id="1_xcuea"]
[ext_resource type="PackedScene" uid="uid://ca7fqg13tqydn" path="res://Skills/skill_1.tscn" id="2_5xi12"]
[ext_resource type="PackedScene" uid="uid://fuamdpqu283q" path="res://Skills/skill_2.tscn" id="3_mdk20"]
[ext_resource type="PackedScene" uid="uid://b4knl7iw2qknp" path="res://Skills/skill_3.tscn" id="4_hei83"]

[node name="SkillList" type="Node"]
script = ExtResource("1_xcuea")

[node name="Skill1" parent="." instance=ExtResource("2_5xi12")]

[node name="Skill2" parent="." instance=ExtResource("3_mdk20")]

[node name="Skill3" parent="." instance=ExtResource("4_hei83")]
